Second section of the website added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,31 @@
                 <div class="website-header">This website is awesome</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur itaque aspernatur 
                 consectetur rerum sit sunt, ex nam reiciendis eaque tempore aperiam similique! 
-                Maiores perferendis quas vero expedita, magni reprehenderit!</p>
+                Maiores perferendis quas vero expedita, magni reprehenderit!
                 <button>Sign up</button>
             </div>
-            <img src="./images-links/neom-33g2yfhLBLU-unsplash.jpg" alt="man in grand canyon"/>
+            <img src="./images-links/Main-img.jpg" alt="man in grand canyon"/>
+        </div>
+    </div>
+    <div class="section-2">
+        <div class="section-2-header">What could be in the pokeball?</div>
+        <div class="poke-container">
+            <div class = "pokeball-cards">
+                <img class = "poke-image" src = "./images-links/Pokeball-1.jpg">
+                <p class="poke-desc">Does this have pikachu?</p>
+            </div>
+            <div class = "pokeball-cards">
+                <img class = "poke-image" src = "./images-links/Pokeball-2.jpg">
+                <p class="poke-desc">Does this have pikachu?</p>
+            </div>
+            <div class = "pokeball-cards">
+                <img class = "poke-image" src = "./images-links/Pokeball-3.jpg">
+                <p class="poke-desc">Does this have pikachu?</p>
+            </div>
+            <div class = "pokeball-cards">
+                <img class = "poke-image" src = "./images-links/Pokeball-4.jpg">
+                <p class="poke-desc">Does this have pikachu?</p>
+            </div>
         </div>
     </div>
 </body>
