Section - 3 of landing page, is now visible

--- a/index.html
+++ b/index.html
@@ -49,5 +49,16 @@
             </div>
         </div>
     </div>
+    <div class="section-3">
+        <div class = "quote-container">
+            <p class="quote-italicised">
+                "A ship is safe in its harbor, but its not what its meant to be"
+            </p>
+            <p class="author">
+                -Anonymous
+            </p>
+        </div>
+    </div>
+    
 </body>
 </html>
