section-4 and footer of website now added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem consequuntur itaque aspernatur 
                 consectetur rerum sit sunt, ex nam reiciendis eaque tempore aperiam similique! 
                 Maiores perferendis quas vero expedita, magni reprehenderit!
-                <button>Sign up</button>
+                <button class="section-1-signup">Sign up</button>
             </div>
             <img src="./images-links/Main-img.jpg" alt="man in grand canyon"/>
         </div>
@@ -59,6 +59,22 @@
             </p>
         </div>
     </div>
-    
+    <div class = "section-4">
+        <div class="call-container">
+            <div class="call-content">
+                <p><strong style="font-size: 36px;">Call to action! It's time!</strong>
+                </br>Signup for our product by clicking that button right over there
+                </p>
+            </div>
+            <div class="action-signup">
+                <button class="sing-up">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class = "footer">
+        <div class="footer-container">
+            <span>Copyright &#169; The Odin Project</span>
+        </div>
+    </div>
 </body>
 </html>
